--- a/src/assets/scss/null.scss
+++ b/src/assets/scss/null.scss
@@ -25,10 +25,11 @@ body {
 	height: 100%;
 }
 body {
-	color: #47525e;
+	color: #141619;
 	line-height: 1;
-	font-family: "Lato";
-	font-size: 18px;
+	font-family: "Roboto";
+	font-weight: 400;
+	font-size: 16px;
 	//text-rendering: optimizeLegibility;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
