--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:regular,500,700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Roboto:regular,500,700&display=swap');
 
 $whiteColor: #fff;
 $grayColor: #687684;
@@ -6,18 +6,18 @@ $blueColor: #4c9eeb;
 $greenColor: #03b48a;
 
 .wrapper {
-  min-height: 100%;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+	min-height: 100%;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
 }
 
 .main {
-  flex: 1 1 auto;
-  display: grid;
-  grid-template-columns: 200px 1fr;
-  gap: 40px;
+	flex: 1 1 auto;
+	display: grid;
+	grid-template-columns: 200px 1fr;
+	gap: 40px;
 }
 
-@import "null";
+@import 'null';
