--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -80,9 +80,5 @@
 
 .showmore {
 	text-align: center;
-	button {
-		padding: 10px 20px;
-		background-color: #13ce66;
-		color: #fff;
-	}
+	margin-bottom: 30px;
 }
